# EternityChan

./: Cargo.toml  Dockerfile  README.md  Rocket.toml
src/: main.rs
static/: index.html  main.js  privacy-policy.html  styles.css  terms-of-service.html
