[package]
name = "EternityChan"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
rand = "0.8"
chacha20poly1305 = "0.10"
sha3 = "0.10.8"
argon2 = "0.5"
zeroize = "1.5"
hex = "0.4"
rpassword = "7.2.0"